Remove code that deletes the PreReadFieldTrial registry key.

The code that deletes the PreReadFieldTrial registry key landed in M55.
The key should now have been deleted from every client and the deletion
code should no longer be needed.

BUG=720210,557984

Review-Url: https://codereview.chromium.org/2875633002
Cr-Commit-Position: refs/heads/master@{#470901}

Former-commit-id: 2f57af188a5c2c4ac67aa6ed198a37e39cb7f6d6